eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api-deployment
  labels:
    app: bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app: bank-api
    spec:
      containers:
        - name: bank-api
          image: 665911299079.dkr.ecr.ap-southeast-2.amazonaws.com/bank:latest
          ports:
            - containerPort: 8080
